# rconf

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: main.rs  settings.rs
