[package]
name = "rconf"
version = "0.1.0"
authors = ["Jason Verbeek <jason@localhost8080.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version = "1.0.124", features = ["derive"] }
shellexpand = "2.1.0"
directories = "^2.0"

