[package]
name = "rconf"
version = "2.0.0"
authors = ["Jason Verbeek <jason@localhost8080.org>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version = "1.0.124", features = ["derive"] }
shellexpand = "2.1.0"
directories-next = "^2.0"
clap = "^2.33"
